stylesheets/_site-branding.scss
/** === Site Branding === */

.site-header {

	position: relative;
	border-bottom: 1px solid gray;
	border-bottom-color: $x-color-border-base;

	.site-header-wrapper {
		@include media( tablet ) {
			max-width: $x-grid-column-12;
			display: flex;
			align-items: center;
			margin-left: auto;
			margin-right: auto;
		}		
	}
}

.site-identity {

	color: $x-color-words-subtle;
	margin: $x-space-sm;
	
	@include media( tablet ) {
		margin: $x-space-md;
	}

	& > * {
		margin-bottom: $x-space-xs;

		&:first-child {
			margin-top: 0;
		}

		&:last-child {
			margin-bottom: 0;
		}
	}

	@include media( tablet ) {

		max-width: $x-grid-column-5;
		display: flex;
		align-content: stretch;
		align-items: center;
		width: 100%;

		& > * {
			margin-bottom: 0;
			margin-right: $x-space-sm;

			&:last-child {
				margin-right: 0;
			}
		}
	}

	.site-title {

		font-family: $x-font-family-body;
		font-size: $x-font-size-lg;
		color: $x-color-words-base;
		margin: 0;

		a {
			@include link-transition;
			display: block;
			text-decoration: none;
			color: $x-color-words-heading;

			&:hover {
				color: $x-color-secondary-base;
			}
		}
	}

	.site-description {
		font-family: $x-font-family-heading;
		font-size: $x-font-size-xs;
		color: $x-color-words-subtle;
		margin: 0.5em 0 0;
		font-weight: normal;
	}

	.custom-logo-link {
		display: block;
		line-height: 0;
	}
}

.site-footer {

	border-top: 1px solid grey;
	border-color: $x-color-border-base;

	@include media( tablet ) {
		
		$credits_width: 60%;
		
		.site-credits {
			box-sizing: border-box;
			max-width: $credits_width;
			padding-right: $x-space-md;
		}
	
		.social-navigation {
			max-width: 100% - $credits_width;
		}
	}
	
}

.site-info {

	font-size: $x-font-size-sm;
	font-family: $x-font-family-body;
	padding: $x-space-sm;
	
	@include media( mobile ) {
		display: flex;
		flex-direction: column;
		padding-top: 0;
		padding-bottom: 0;
	}
	
	a {
		color: inherit;
		&:hover {
			text-decoration: none;
			color: $x-color-primary-base;
		}
	}

	@include media( tablet ) {
		max-width: $x-grid-column-10;
		border-bottom: none;
		display: flex;
		align-items: center;
		justify-content: space-between;
		margin-left: auto;
		margin-right: auto;
		padding: $x-space-lg $x-space-sm;
	}
}

.site-credits {
	
	@include media( mobile ) {
		margin: 0;
		padding: $x-space-md 0;
		width: 100%;
		order: 2;
	}
	
}

#primary-menu {
//	display: none;
}

